welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:10: error: type mismatch;
 found   : Int(0)
 required: Boolean
    return 0
           ^SnakeBuggle:9: error: type mismatch;
 found   : Unit
 required: Boolean
  if (estFaceMur){
  ^