welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
  while (!finale())
  {
    serpent()
  }
}

def finale():Boolean={
  if (estFaceMur){
    return 0
  }
}

def serpent() {
  if (!estFaceMur())
  {
    avance()
  }
  else
  {
    if (getDirection()==Direction.EST)
    {
      gauche()
      avance()
      droite()
    }
    else
    {
      droite()
      avance()
      gauche()
    }
  }
}

